se agrego diseño al estilo del main

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             
             </div>
     </header>
-    <main>
+    <main class="contenedor-main">
         <div>
             <div>
                 <div class="novedades-principales">
@@ -216,7 +216,7 @@
                         </div>
                     </div>
                     <div class="suscribete-nivel-abajo">
-                        <button class="boton-suscribete-nivel text-boton-sucribete-nivel">Suscribete</button>
+                        <button class="boton-suscribete-nivel ">Suscribete</button>
                     </div>
                 </div>
                 <div class="beneficios-punto-pp">
